Fix text overflow errors

--- a/src/app/sections/experience-section/experience-section.component.scss
+++ b/src/app/sections/experience-section/experience-section.component.scss
@@ -25,6 +25,12 @@
         display: flex;
         justify-content: space-between;
 
+        @include media(0, 475px) {
+          flex-direction: column;
+          align-items: center;
+          gap: 0.5rem;
+        }
+
         & > h3 {
           margin: 0;
           font-size: 1.5rem;
@@ -44,7 +50,6 @@
         margin: 1rem 0 0.75rem 0;
         font-size: 1.35rem;
         font-weight: 500;
-        white-space: nowrap;
       }
 
       &__description {
