--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,7 +63,7 @@ button {
   text-align: center;
   letter-spacing: 0.1em;
   white-space: nowrap;
-  padding: 1.875rem;
+  padding: 1.875rem 0;
   margin: 0;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -99,6 +99,9 @@ button {
   }
 }
 
+.section-container .error-message {
+  overflow-wrap: break-word;
+}
 .error-message {
   width: 100%;
   font-size: 3.5rem;
